fix link colors in dark mode

--- a/packages/admin-ui/src/light_dark.scss
+++ b/packages/admin-ui/src/light_dark.scss
@@ -47,7 +47,6 @@
     span,
     div,
     td,
-    a,
     label {
       color: var(--color-dark-secondarytext);
     }
